--- a/AlmarERP/src/almar/ventanas/VentanaClientes.form
+++ b/AlmarERP/src/almar/ventanas/VentanaClientes.form
@@ -155,6 +155,9 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTF_NifKeyReleased"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
