--- a/AlmarERP/src/almar/ventanas/VentanaProveedores.form
+++ b/AlmarERP/src/almar/ventanas/VentanaProveedores.form
@@ -152,6 +152,9 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTF_CifKeyReleased"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
